# Tetris-game

./: .gitignore  README.md
ProjectStructure/ProjectStructure/src/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameState.hpp  IPiece.cpp  JPiece.cpp  JPiece.h  LPiece.cpp  LPiece.h  Piece.hpp  PieceBag.cpp  PieceBag.h  Position.hpp  SPiece.cpp  SPiece.h  SquarePiece.cpp  SquarePiece.h  TPiece.cpp  TPiece.h  ZPiece.cpp  ZPiece.h
ProjectStructure/__MACOSX/: ._ProjectStructure
project/: CMakeLists.txt  GUIController.cpp  GUIController.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
project/Tetris_project/: CMakeLists.txt  Piece.h
project/Tetris_project/src/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameSate.h  GameState.cpp  GameState.h  GameState.hpp  IPiece.h  JPiece.cpp  Piece.h  PieceBag.cpp  PieceBag.h  TPiece.cpp  TetrisApp.cpp  main.cpp
project/Tetris_project/src/controller/: ConsoleController.cpp  ConsoleController.h  Controller.cpp  Controller.h
project/Tetris_project/src/gui/: ConfigWindow.cpp  ConfigWindow.h  GameBoardWidget.cpp  GameBoardWidget.h  GameWindow.cpp  GameWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
project/Tetris_project/src/model/: GameBoard.cpp  GameBoard.h  GameSate.h  GameState.cpp  GameState.h  Observable.cpp  Observable.h  PieceBag.cpp  PieceBag.h  Position.hpp  TetrisGame.cpp  TetrisGame.h  TetrisModel.cpp  TetrisModel.h
project/Tetris_project/src/model/pieces/: IPiece.h  JPiece.h  LPiece.cpp  LPiece.h  Piece.cpp  Piece.h  SPiece.cpp  SPiece.h  SquarePiece.cpp  SquarePiece.h  TPiece.h  ZPiece.h
project/Tetris_project/src/view/: ConsoleView.hpp
project/Tetris_project/tests/: CMakeLists.txt  testGameBoard.cpp  testPiece.cpp  testPieceBag.cpp
project/__MACOSX/ProjectStructure/tests/: ._testMyClass.cpp
project/controller/: GUIController.h
project/model/: GameState.cpp  GameState.h  TetrisGame.h  TetrisModel.cpp  TetrisModel.h
